# x402-rs

./: .cargoignore  .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.json.example  justfile  thinking-req.md  upto_scheme.md
.cargo/: config.toml
.config/: rail.toml
.github/workflows/: build-images.yaml  ci.yaml  docker-build.yaml  fork-ci.yaml
crates/chains/x402-chain-aptos/: Cargo.toml  README.md
crates/chains/x402-chain-aptos/src/: lib.rs  networks.rs
crates/chains/x402-chain-aptos/src/chain/: config.rs  mod.rs  provider.rs  types.rs
crates/chains/x402-chain-aptos/src/v2_aptos_exact/: facilitator.rs  facilitator_tests.rs  mod.rs  types.rs
crates/chains/x402-chain-eip155/: Cargo.toml  README.md
crates/chains/x402-chain-eip155/abi/: IERC20.json  IERC20Permit.json  IPermit2.json  X402ExactPermit2Proxy.json  X402UptoPermit2Proxy.json  x402Permit2Proxy.json
crates/chains/x402-chain-eip155/src/: eip2612_gas_sponsoring.rs  lib.rs  networks.rs
crates/chains/x402-chain-eip155/src/chain/: config.rs  erc20.rs  mod.rs  pending_nonce_manager.rs  permit2.rs  provider.rs  types.rs
crates/chains/x402-chain-eip155/src/v1_eip155_exact/: client.rs  facilitator.rs  mod.rs  server.rs  types.rs
crates/chains/x402-chain-eip155/src/v2_eip155_batch_settlement/: constants.rs  encoding.rs  errors.rs  mod.rs  types.rs
crates/chains/x402-chain-eip155/src/v2_eip155_batch_settlement/facilitator/: abi.rs  authorizer_signer.rs  mod.rs  response.rs  settle.rs  utils.rs  verify.rs  voucher.rs
crates/chains/x402-chain-eip155/src/v2_eip155_exact/: client.rs  facilitator.rs  mod.rs  permit2_types.rs  server.rs  types.rs
crates/chains/x402-chain-eip155/src/v2_eip155_exact/facilitator/: eip2612.rs  eip3009.rs  facilitator_tests.rs  mod.rs  permit2.rs
crates/chains/x402-chain-eip155/src/v2_eip155_upto/: client.rs  mod.rs  server.rs  types.rs
crates/chains/x402-chain-eip155/src/v2_eip155_upto/facilitator/: eip2612.rs  mod.rs  permit2.rs
crates/chains/x402-chain-eip155/tests/: batch_settlement_parity.rs
crates/chains/x402-chain-solana/: Cargo.toml  README.md
crates/chains/x402-chain-solana/src/: lib.rs  networks.rs
crates/chains/x402-chain-solana/src/chain/: config.rs  mod.rs  provider.rs  rpc.rs  types.rs
crates/chains/x402-chain-solana/src/v1_solana_exact/: README.md  client.rs  facilitator.rs  facilitator_tests.rs  mod.rs  server.rs  types.rs
crates/chains/x402-chain-solana/src/v2_solana_exact/: client.rs  facilitator.rs  mod.rs  server.rs  types.rs
crates/chains/x402-chain-tron/: Cargo.toml  README.md
crates/chains/x402-chain-tron/src/: lib.rs  networks.rs
crates/chains/x402-chain-tron/src/chain/: address.rs  config.rs  contracts.rs  mod.rs  provider.rs  types.rs
crates/chains/x402-chain-tron/src/v2_tron_exact/: mod.rs  types.rs
crates/chains/x402-chain-tron/src/v2_tron_exact/facilitator/: eip3009.rs  mod.rs  permit2.rs
crates/x402-axum/: Cargo.toml  README.md
crates/x402-axum/src/: facilitator_client.rs  layer.rs  layer.rs.old  lib.rs  paygate.rs  price.rs
crates/x402-core/: Cargo.toml
crates/x402-core/src/util/: b64.rs  mod.rs
crates/x402-eip155/: Cargo.toml
crates/x402-eip155/abi/: Validator6492.json
crates/x402-eip155/src/: lib.rs
crates/x402-eip155/src/chain/: config.rs  mod.rs
crates/x402-eip155/src/v1_eip155_exact/: types.rs
crates/x402-facilitator-local/: Cargo.toml  README.md
crates/x402-facilitator-local/src/: facilitator_local.rs  handlers.rs  lib.rs  metrics.rs
crates/x402-facilitator-local/src/util/: mod.rs  sig_down.rs  telemetry.rs
crates/x402-reqwest/: Cargo.toml  README.md
crates/x402-reqwest-0/: README.md
crates/x402-reqwest/src/: builder.rs  client.rs  http_transport.rs  lib.rs  middleware.rs
crates/x402-reqwest/src/chains/: evm.rs  mod.rs  solana.rs
crates/x402-rs/: Cargo.toml
crates/x402-solana/: Cargo.toml
crates/x402-types/: Cargo.toml  README.md
crates/x402-types/src/: config.rs  facilitator.rs  lib.rs  networks.rs  timestamp.rs
crates/x402-types/src/chain/: chain_id.rs  mod.rs
crates/x402-types/src/proto/: mod.rs  util.rs  v1.rs  v2.rs
crates/x402-types/src/scheme/: client.rs  mod.rs
crates/x402-types/src/util/: b64.rs  decimal_u256.rs  lit_str.rs  mod.rs  money_amount.rs
docs/: build-your-own-facilitator.md  how-to-write-a-scheme.md
docs/specs/: AGENTS.md  CONTRIBUTING.md  README.md  scheme_impl_template.md  scheme_template.md  transport_template.md  x402-specification-v1.md  x402-specification-v2.md
examples/x402-axum-example/: .env.example  Cargo.toml  LICENSE  README.md
examples/x402-axum-example/src/: main.rs
examples/x402-axum-example/src/x402/: facilitator_client.rs  m0.rs  middleware.rs  mod.rs  paygate.rs  paygate2.rs  paygate_error.rs  paygate_uni.rs  paygate_v2.rs  price.rs  v1_eip155_exact.rs  v1_solana_exact.rs  v2_eip155_exact.rs  v2_solana_exact.rs  x402_error.rs
examples/x402-reqwest-example/: .env.example  Cargo.toml  README.md
examples/x402-reqwest-example/src/: client.rs  http_transport.rs  main.rs  payment_required.rs  v2_eip155_exact_client.rs  x402_req.rs
examples/x402-reqwest-example/src.0/: http_transport.rs  main.rs  x402_req.rs
examples/x402-reqwest-upto-eip155/: .env.example  Cargo.toml  README.md
examples/x402-reqwest-upto-eip155/src/: main.rs
facilitator/: Cargo.toml  README.md  config.json.example
facilitator/src/: chain.rs  config.rs  lib.rs  main.rs  run.rs  schemes.rs
patches/aptos-runtimes/: Cargo.toml
plans/: learnings.md  permit2-implementation-plan.md  test-harness-plan.md
protocol-compliance/: .env.example  README.md  justfile  package.json  pnpm-lock.yaml  test-config.example.json  tsconfig.json  vitest.config.ts
protocol-conformance/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: b64.rs  config.rs  config.rs.bak0  facilitator.rs  facilitator_local.rs  from_env.rs  handlers.rs  known.rs  lib.rs  lib.rs.bak0  main.rs  network.rs  networks.rs  provider_cache.rs  telemetry.rs  timestamp.rs  trace_id.rs  types.rs
(+174 files in other folders)
