[workspace]
resolver = "3"
members = [
  "crates/x402-types",
  "crates/x402-axum",
  "crates/x402-reqwest",
  "crates/x402-facilitator-local",
  "crates/chains/x402-chain-eip155",
  "crates/chains/x402-chain-solana",
  "crates/chains/x402-chain-aptos",
  "facilitator",
  "examples/x402-axum-example",
  "examples/x402-reqwest-example",
]

[workspace.package]
version = "0.12.6"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/x402-rs/x402-rs"
homepage = "https://x402.rs"

[workspace.dependencies]
# Internal crates
x402-types = { path = "crates/x402-types" }
x402-axum = { path = "crates/x402-axum" }
x402-reqwest = { path = "crates/x402-reqwest" }
x402-facilitator-local = { path = "crates/x402-facilitator-local" }
x402-chain-eip155 = { path = "crates/chains/x402-chain-eip155" }
x402-chain-solana = { path = "crates/chains/x402-chain-solana" }
x402-chain-aptos = { path = "crates/chains/x402-chain-aptos" }

# Common dependencies
thiserror = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
async-trait = { version = "0.1" }
serde_json = { version = "1.0", features = ["raw_value"] }
url = { version = "2.5", features = ["serde"] }
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing = { version = "0.1.41" }
tracing-core = { version = "0.1.34" }
dotenvy = { version = "0.15.7" }
base64 = { version = "0.22.1" }
hex = { version = "0.4" }
once_cell = { version = "1.21.3" }
dashmap = { version = "6.1.0" }
rand = { version = "0.9.2" }
rust_decimal = { version = "1.39.0" }
serde_with = { version = "3.16.1" }
regex = { version = "1.12.2" }
clap = { version = "4.5", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web framework
axum = { version = "0.8" }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# FIXME Patches
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }

[patch."https://github.com/aptos-labs/aptos-core"]
aptos-runtimes = { path = "patches/aptos-runtimes" }
