[workspace]
resolver = "3"
members = [
  "crates/x402-types",
  "crates/x402-axum",
  "crates/x402-reqwest",
  "crates/x402-facilitator-local",
  "crates/chains/x402-chain-eip155",
  "crates/chains/x402-chain-solana",
  "crates/chains/x402-chain-aptos",
  "facilitator",
  "examples/x402-axum-example",
  "examples/x402-reqwest-example",
]

[workspace.package]
version = "1.1.3"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/x402-rs/x402-rs"
homepage = "https://x402.rs"
rust-version = "1.88.0"
keywords = ["blockchain", "payments", "x402", "stablecoin", "http-402"]
categories = ["cryptography::cryptocurrencies", "finance", "network-programming", "web-programming::http-server"]

[workspace.dependencies]
x402-axum = { version = "1.0", path = "crates/x402-axum" }
x402-chain-aptos = { version = "1.0", path = "crates/chains/x402-chain-aptos" }
x402-chain-eip155 = { version = "1.0", path = "crates/chains/x402-chain-eip155" }
x402-chain-solana = { version = "1.0", path = "crates/chains/x402-chain-solana" }
x402-facilitator-local = { version = "1.0", path = "crates/x402-facilitator-local" }
x402-reqwest = { version = "1.0", path = "crates/x402-reqwest" }
x402-types = { version = "1.0", path = "crates/x402-types" }

alloy-primitives = { version = "1.4.1" } # To represent token amounts
async-trait = { version = "0.1" }
axum = { version = "0.8" }
dotenvy = { version = "0.15.7" }
http = { version = "1.4" }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Common dependencies
thiserror = { version = "2.0" }
tokio = { version = "1.35", features = ["sync", "rt-multi-thread"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tower = { version = "0.5" }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = { version = "0.1" }
tracing-core = { version = "0.1.34" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }

# Patches for aptos-core dependencies
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }

[patch."https://github.com/aptos-labs/aptos-core"]
aptos-runtimes = { path = "patches/aptos-runtimes" }
