[package]
name = "facilitator"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
telemetry = ["dep:tracing", "x402-facilitator-local/telemetry", "x402-chain-eip155/telemetry", "x402-chain-solana/telemetry", "x402-chain-aptos/telemetry"]

[dependencies]
x402-types = { workspace = true }
x402-facilitator-local = { workspace = true, features = ["telemetry"] }
x402-chain-eip155 = { workspace = true, features = ["telemetry", "facilitator"] }
x402-chain-solana = { workspace = true, features = ["telemetry"] }
x402-chain-aptos = { workspace = true, features = ["telemetry"] }

dotenvy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

clap = { version = "4.5", features = ["derive", "env"] }
rustls = { version = "0.23" }
