[package]
name = "x402-facilitator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Production-ready x402 facilitator server binary"
readme = "README.md"
publish = false

[features]
default = []
telemetry = ["dep:tracing", "x402-facilitator-local/telemetry", "x402-chain-eip155/telemetry", "x402-chain-solana/telemetry", "x402-chain-aptos/telemetry"]

# FIXME Check README
# FIXME feature-toggle chains
# FIXME Dockerfile and GH support

[dependencies]
x402-types = { workspace = true }
x402-facilitator-local = { workspace = true, features = ["telemetry"] }
x402-chain-eip155 = { workspace = true, features = ["facilitator"] }
x402-chain-solana = { workspace = true, features = ["facilitator"] }
x402-chain-aptos = { workspace = true, features = ["facilitator"] }

dotenvy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

clap = { version = "4.5", features = ["derive", "env"] }
rustls = { version = "0.23" }
