[package]
name = "x402-facilitator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Production-ready x402 facilitator server binary"
readme = "README.md"
publish = false

[[bin]]
name = "x402-facilitator"
path = "src/main.rs"

[features]
default = []
telemetry = ["dep:tracing", "x402-facilitator-local/telemetry", "x402-chain-eip155?/telemetry", "x402-chain-solana?/telemetry", "x402-chain-aptos?/telemetry"]
chain-aptos = ["dep:x402-chain-aptos"]
chain-eip155 = ["dep:x402-chain-eip155"]
chain-solana = ["dep:x402-chain-solana"]

# FIXME Package name x402-facilitator (incl README)
# FIXME Dockerfile and GH support
# FIXME fs-facilitator

[dependencies]
x402-types = { workspace = true }
x402-facilitator-local = { workspace = true, features = ["telemetry"] }
x402-chain-eip155 = { workspace = true, features = ["facilitator"], optional = true }
x402-chain-solana = { workspace = true, features = ["facilitator"], optional = true }
x402-chain-aptos = { workspace = true, features = ["facilitator"], optional = true }

dotenvy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

clap = { version = "4.5", features = ["derive", "env"] }
rustls = { version = "0.23", features = ["ring"] }
