[package]
name = "x402-axum"
version = "0.9.0"
edition = "2024"
description = "Axum middleware for enforcing x402 protocol payments on protected routes"
license = "Apache-2.0"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
repository = "https://github.com/x402-rs/x402-rs"
homepage = "https://x402.rs"
documentation = "https://docs.rs/x402-axum"
keywords = ["axum", "middleware", "x402", "payments", "stablecoin"]
categories = ["web-programming::http-server", "authentication", "cryptography", "finance", "network-programming"]
readme = "README.md"

[dependencies]
x402-types = { version = "1.0", workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
axum-core = { version = "0.5" }

# Telemetry
tracing = { workspace = true, optional = true }

[dev-dependencies]
wiremock = "0.6"
axum = { workspace = true }
alloy-primitives = { workspace = true }
x402-chain-eip155 = { workspace = true }

[features]
default = []
telemetry = ["dep:tracing"]
