[package]
name = "x402-eip155"
version = "0.1.0"
edition = "2024"

[dependencies]
x402-types = { path = "../x402-types" }
serde = { version = "1.0.219", features = ["derive"] } # FIXME Features schemes, facilitator, server, client
async-trait = { version = "0.1" }
dashmap = { version = "6.1.0" }
tokio = { version = "1.45" }
tower = { version = "0.5.2" }
thiserror = { version = "2.0.12" }
serde_json = { version = "1.0.145", features = ["raw_value"] }
rand = { version = "0.9.2" }

# Alloy
alloy-primitives = { version = "1.4.1" }
alloy-provider = { version = "1.1.3" }
alloy-network = { version = "1.1.3" }
alloy-rpc-client = { version = "1.1.3" }
alloy-rpc-types-eth = { version = "1.1.3" }
alloy-transport = { version = "1.1.3", features = ["throttle"] }
alloy-transport-http = { version = "1.1.3" }
alloy-signer = { version = "1.1.3" }
alloy-signer-local = { version = "1.1.3" }
alloy-contract = { version = "1.1.3" }
alloy-sol-types = { version = "1.4.1", features = ["json"] }

tracing = { version = "0.1.41" }
tracing-core = { version = "0.1.34" }
