[package]
name = "x402-facilitator-local"
version = "0.1.0"
edition = "2024"

[dependencies]
x402-types = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

# Tracing and OpenTelemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31" }
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
tracing-opentelemetry = { version = "0.32" }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "grpc-tonic"] }
opentelemetry-stdout = { version = "0.31", features = ["trace", "metrics"] }
