[package]
name = "x402-reqwest"
version = "0.6.0"
edition = "2024"
description = "Wrapper for reqwest for transparent x402 payments"
license = "Apache-2.0"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
repository = "https://github.com/x402-rs/x402-rs"
homepage = "https://x402.rs"
documentation = "https://docs.rs/x402-reqwest"
keywords = ["axum", "middleware", "x402", "payments", "stablecoin"]
categories = ["web-programming::http-client", "authentication", "cryptography", "finance", "network-programming"]
readme = "README.md"

[dependencies]
x402-types = { path = "../x402-types" }
x402-rs = { version = "0.12", default-features = false }
reqwest = { version = "0.13" }
http = { version = "1.4" }
reqwest-middleware = { version = "0.5" }
async-trait = { version = "0.1" }
serde_json = { version = "1.0" }

# Telemetry
tracing = { version = "0.1", optional = true }

[dev-dependencies]
alloy-signer-local = { version = "1.4" }
x402-chain-eip155 = { path = "../chains/x402-chain-eip155" }

[features]
default = []
telemetry = ["dep:tracing", "x402-rs/telemetry"]
json = ["reqwest-middleware/json"]
