[package]
name = "x402-reqwest"
version = "1.0.0"
edition = "2024"
description = "Wrapper for reqwest for transparent x402 payments"
license = "Apache-2.0"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
repository = "https://github.com/x402-rs/x402-rs"
homepage = "https://x402.rs"
documentation = "https://docs.rs/x402-reqwest"
keywords = ["axum", "middleware", "x402", "payments", "stablecoin"]
categories = ["web-programming::http-client", "authentication", "cryptography", "finance", "network-programming"]
readme = "README.md"

[dependencies]
x402-types = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

reqwest-middleware = { version = "0.5" }

# Telemetry
tracing = { workspace = true, optional = true }

[dev-dependencies]
alloy-signer-local = { version = "1.4" }
x402-chain-eip155 = { workspace = true, features = ["client"] }

[features]
default = []
telemetry = ["dep:tracing", "x402-types/telemetry"]
json = ["reqwest-middleware/json"]
