[package]
name = "x402-types"
version = "0.1.0"
edition = "2024"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
license = "Apache-2.0"
repository = "https://github.com/x402-rs/x402-rs"
description = "Core structures for x402 payments in Rust: verify, settle, and monitor payments over HTTP 402 flows"
readme = "README.md" # FIXME
homepage = "https://x402.rs"
documentation = "https://docs.rs/x402-rs"
keywords = ["blockchain", "payments", "x402", "stablecoin", "http-402"]
categories = ["cryptography", "finance", "network-programming", "web-programming::http-server"]

[dependencies]
base64 = { version = "0.22.1" }
rust_decimal = { version = "1.39.0" }
regex = { version = "1.12.2" }
thiserror = { version = "2.0.12" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
serde_with = { version = "3.16.1" }
async-trait = { version = "0.1" }
alloy-primitives = { version = "1.4.1" }
url = { version = "2.5.4", features = ["serde"] }

# Tracing
tracing = { version = "0.1.41" } # Feature tracing
