[package]
name = "x402-axum-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
x402-types = { path = "../../crates/x402-types" }
x402-chain-eip155 = { path = "../../crates/chains/x402-chain-eip155" }
x402-chain-solana = { path = "../../crates/chains/x402-chain-solana" }
x402-axum = { path = "../../crates/x402-axum", features = ["telemetry"] }
http = { version = "1.4.0" }

axum = { version = "0.8.7" }
tokio = { version = "1.48.0" }
dotenvy = { version = "0.15.7" }
alloy-primitives = { version = "1.4.1" }
solana-pubkey = { version = "4.0.0" }

# Tracing and OpenTelemetry
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
