[package]
name = "x402-axum-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
x402-types = { path = "../../crates/x402-types" }
x402-chain-eip155 = { path = "../../crates/chains/x402-chain-eip155" }
x402-chain-solana = { path = "../../crates/chains/x402-chain-solana" }
x402-axum = { path = "../../crates/x402-axum", features = ["telemetry"] }
http = { version = "1.4.0" }

axum = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
alloy-primitives = { workspace = true }
solana-pubkey = { version = "4.0.0" }

# Tracing and OpenTelemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
