[package]
name = "x402-reqwest-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
x402-chain-eip155 = { path = "../../crates/chains/x402-chain-eip155" }
x402-chain-solana = { path = "../../crates/chains/x402-chain-solana" }
x402-reqwest = { path = "../../crates/x402-reqwest", features = ["telemetry"] }
reqwest = { version = "0.13" }
tokio = { workspace = true } # FIXME Unify deps
dotenvy = { workspace = true }

# EVM: Alloy
alloy-signer-local = { version = "1.1.3" }

# Solana
solana-client = { version = "3.1.4" }
solana-keypair = { version = "3.1.0" }
