[package]
name = "x402-chain-aptos"
version = "0.1.0"
edition = "2024"

[dependencies] # FIXME Features schemes, facilitator, server, client
x402-types = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
hex = { version = "0.4" }

aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.39.2" }
aptos-rest-client = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.39.2" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.39.2" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.39.2" }
bcs = { version = "0.1" }

tracing = { workspace = true }
