[package]
name = "x402-chain-aptos"
publish = false # Due to Aptos dependencies not published on crates.io
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Aptos chain support for the x402 payment protocol"
readme = "README.md"

[features]
default = []
telemetry = ["tracing", "x402-types/telemetry"]
facilitator = ["async-trait", "url", "hex", "aptos-crypto", "aptos-types", "bcs", "aptos-rest-client"]

[dependencies]
x402-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

url = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
hex = { version = "0.4", optional = true }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.39.2" }

# Facilitator feature
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.39.2", optional = true }
aptos-rest-client = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.39.2", optional = true }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.39.2", optional = true }
bcs = { version = "0.1", optional = true }

# Telemetry
tracing = { workspace = true, optional = true }
