[package]
name = "x402-chain-eip155"
version = "0.1.0"
edition = "2024"

[features]
default = []
telemetry = ["tracing", "tracing-core", "x402-types/telemetry"]
client = []
server = []
facilitator = []

[dependencies]  # FIXME Features schemes, facilitator, server, client
x402-types = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

dashmap = { version = "6.1.0" }
rand = { version = "0.9.2" }

# Alloy
alloy-primitives = { version = "1.4" }
alloy-provider = { version = "1.4" }
alloy-network = { version = "1.4" }
alloy-rpc-client = { version = "1.4" }
alloy-rpc-types-eth = { version = "1.4" }
alloy-transport = { version = "1.4", features = ["throttle"] }
alloy-transport-http = { version = "1.4" }
alloy-signer = { version = "1.4" }
alloy-signer-local = { version = "1.4" }
alloy-contract = { version = "1.4" }
alloy-sol-types = { version = "1.4", features = ["json"] }

tracing = { workspace = true, optional = true }
tracing-core = { workspace = true, optional = true }
