[package]
name = "x402-chain-eip155"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "EIP-155 (EVM) chain support for the x402 payment protocol"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
telemetry = ["tracing", "tracing-core", "x402-types/telemetry"]
client = ["alloy-signer", "alloy-signer-local", "rand", "async-trait"]
server = []
facilitator = [
  "alloy-signer",
  "alloy-signer-local",
  "alloy-provider",
  "alloy-network",
  "alloy-rpc-client",
  "alloy-rpc-types-eth",
  "alloy-transport",
  "alloy-transport-http",
  "alloy-contract",
  "dashmap",
  "tokio",
  "tower",
  "async-trait",
  "url"
]
full = ["telemetry", "client", "server", "facilitator"]

[dependencies]
x402-types = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

dashmap = { version = "6.1.0", optional = true }
rand = { version = "0.9.2", optional = true }
url = { workspace = true, optional = true }

# Alloy
alloy-primitives = { version = "1.4" }
alloy-provider = { version = "1.4", optional = true }
alloy-network = { version = "1.4", optional = true }
alloy-rpc-client = { version = "1.4", optional = true }
alloy-rpc-types-eth = { version = "1.4", optional = true }
alloy-transport = { version = "1.4", features = ["throttle"], optional = true }
alloy-transport-http = { version = "1.4", optional = true }
alloy-signer = { version = "1.4", optional = true }
alloy-signer-local = { version = "1.4", optional = true }
alloy-contract = { version = "1.4", optional = true }
alloy-sol-types = { version = "1.4", features = ["json"] }

tracing = { workspace = true, optional = true }
tracing-core = { workspace = true, optional = true }
