[package]
name = "x402-chain-solana"
version = "0.1.0"
edition = "2024"

[dependencies]
x402-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
alloy-primitives = { workspace = true } # Client
serde_json = { workspace = true }

# Solana
solana-compute-budget-interface = { version = "3.0.0" }
solana-pubkey = { version = "4.0.0" }
bs58 = { version = "0.5.1" }
solana-signature = { version = "3.1.0" }
solana-transaction = { version = "3.0.2 "}
solana-signer = { version = "3.0.0" }
solana-account = { version = "3.2.0" }
solana-message = { version = "3.0.1" }
solana-keypair = { version = "3.1.0" }
solana-commitment-config = { version = "3.1.0" }
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
solana-client = { version = "3.1.4" }
bincode = { version = "1.3.3" }
futures-util = { version = "0.3.31" }

tracing = { workspace = true }
tracing-core = { workspace = true }
